XX/XX/23 (TRUST) New feature  : Partition_tool Fichier_MED can read now the partition MED file from a previous partitionned domain to create a conform partitioned mesh 
XX/XX/23 (TRUST) New option   : Add ecrire_med option to Partition tools to write partition field into a MED file
--------------------------------------------------------------------------------------------------
Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
12/01/24 (TRUST) Portability  : cmake 3.21.0 or newer is necessary to install petsc and so TRUST.
12/01/24 (TRUST) New keyword  : Add "petsc LU_Strumpack { }" as direct solver from STRUMPACK library
12/01/24 (TRUST) New keyword  : Add two ILU preconditioners based on Block Low Ranking parametrized (epsilon) compression: petsc gcp|gmres { precond ilu_mumps|ilu_strumpack { epsilon value } ... }. May be useful on problems with solver slow convergence.
12/01/24 (TRUST) Library      : Update PETSc to 3.20.0 (dependancies like MUMPS,... not updated yet)
11/01/24 (TRUST) Tools        : Git repository of 'externalpackages' was reset to start fresh from version 1.9.3
10/01/24 (TRUST) Minor change : TRUST can be linked to a pre-compiled static library of CoolProp 6.6.0 version
10/01/24 (TRUST) Fix          : Nusselt.face file was not updated at the end of computation if this latter is stopped by putting 1 in .stop file
19/12/23 (TRUST) Fix          : The new post-processing format "single_lata" can be used with a TRUST 64 bit integers version.
18/12/23 (TRUST) New feature  : Add option "write_singlelata" to lata_analyzer : useful to merge multiple binary lata files in a single one ! To resplit into multiple files, use "writelata".
--------------------------------------------------------------------------------------------------